hw08: added all services and integration tests